hphp/test/zend/bad/ext/standard/tests/assert/assert_error4.php.expectf

Fatal error: %s
Catchable fatal error: assert(): Failure evaluating code: 
Describing what was asserted:"0 $ 0" in %s on line 3